# rename

./: .gitignore  changelog.md  rename.cabal
src/: Rename.hs
src/Rename/: Error.hs  Options.hs  RegexFile.hs
t/: rename-test.hs
