-- The name of the package.
name:                rename

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.1.1

-- A short (one-line) description of the package.
synopsis:            rename files according to regular expressions

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Martyn J. Pearce

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          haskell@sixears.com

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  ghc-options:        -W -Wall -fhelpful-errors
  -- Modules exported by the library.
  exposed-modules:    Rename

  -- modules included in this library but not exported.
  other-modules:      Rename.Error, Rename.Options, Rename.RegexFile

  default-extensions: FlexibleContexts
                    , LambdaCase
                    , MultiParamTypeClasses
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PatternSynonyms
                    , QuasiQuotes
                    , RankNTypes
                    , ScopedTypeVariables
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeSynonymInstances
                    , UnicodeSyntax
                    , ViewPatterns

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base, containers, extra, logging-effect
                     , optparse-applicative, parsec, parsers, regex-with-pcre
                     , tasty-hunit, text

                     , base1t               >= 0.0.3.0
                     , containers-plus      >= 0.0.10.0
                     , env-fpath            >= 0.0.0.0
                     , env-plus             >= 1.0.3.0
                     , fpath                >= 1.2.0.0
                     , log-plus             >= 0.0.4.0
                     , mockio-log           >= 0.1.0.1
                     , mockio-plus          >= 0.3.5.0
                     , monaderror-io        >= 1.2.2.0
                     , monadio-plus         >= 2.0.10.0
                     , natural              >= 0.0.1.0
                     , non-empty-containers >= 1.4.3.0
                     , optparse-plus        >= 1.3.2.0
                     , parsec-plus          >= 1.1.1.0
                     , parsec-plus-base     >= 1.0.4.0
                     , parser-plus          >= 1.0.7.0
                     , pcre                 >= 0.0.4.0
                     , stdmain              >= 1.5.6.2
                     , tasty-plus           >= 1.5.1.0


  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

-------------------------------------------------------------------------------

executable rename
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  hs-source-dirs:     bin
  main-is:            rename.hs
  build-depends:      rename
  default-extensions: NoImplicitPrelude

  default-language:   Haskell2010

-------------------------------------------------------------------------------

test-suite test
  -- add  -rtsopts -prof -auto-all  for profiling
  ghc-options:         -W -Wall -fhelpful-errors
  type:                exitcode-stdio-1.0
  main-is:             rename-test.hs
  hs-source-dirs:      t
  default-extensions:  NoImplicitPrelude, UnicodeSyntax
  build-depends:       base, tasty

                     , rename
  default-extensions:  NoImplicitPrelude
  default-language:    Haskell2010

--------------------------------------------------------------------------------
